--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1>Comision 36545</h1>
+    <h3>Martes y Jueves de 19 a 21hs</h3>
     <p>Trabajamos con GIT Y GITHUB</p>
 
 </body>
