agregue correctamente imagen

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>Martes y Jueves de 19 a 21hs</h3>
     <p>Trabajamos con GIT Y GITHUB</p>
 
+    <img src="./img/Presentación1.png" alt="Dw">
+
 </body>
 </html>
